static/css/style.css
/* -_-_-_-_-_-_-_-_-_-_ Sticky Footer  _-_-_-_-_-_-_-_-_-_- */
body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
  }

main {
    flex: 1 0 auto;
  }
/* -_-_-_-_-_-_-_-_-_-_ Title _-_-_-_-_-_-_-_-_-_- */
.header-title{
    font-size: 20px;
    padding-left: 10px;
}
.fa-car {
       font-size: 20px; 
       padding-left: 10px;
    }
@media(min-width: 992px){
    .header-title{
        font-size: 30px;
        padding-left: 10px;
    }
    .fa-car {
       font-size: 30px; 
       padding-left: 10px;
    }
}

  #mobile-demo {
    background-color: #004d40;
}

/* -_-_-_-_-_-_-_-_-_-_ Footer _-_-_-_-_-_-_-_-_-_- */
.footer-copyright  {
    font-size: 10px;
}
.footer-copyright i {
    font-size: 18px;
    margin-right: 20px;
}
.footer-copyright i:hover{
    color: darkgrey;
}

@media(min-width: 992px){
    .footer-copyright  {
       font-size: 18px;
    }
    .footer-copyright i {
    font-size: 30px;
    margin-right: 50px;
    }
}
/* -_-_-_-_-_-_-_-_-_-_  Tracker Page Boxes _-_-_-_-_-_-_-_-_-_- */
.box_header{
    border-bottom: 1px solid black;
}
.left_indent {
    padding-left: 20px;
}

/* -_-_-_-_-_-_-_-_-_-_  Add Record Page _-_-_-_-_-_-_-_-_-_- */
/* Remove arrows from number boxes
    /* Chrome, Safari, Edge, Opera */
    input::-webkit-outer-spin-button,
    input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
    }

    /* Firefox */
    input[type=number] {
    -moz-appearance: textfield;
    }

    .input-field{
        color: white;
    }
.item_button{
    font-size: 30px;
    padding-left: 30px;
}
/* -_-_-_-_-_-_-_-_-_-_  Add Record Page _-_-_-_-_-_-_-_-_-_- */
.profile_card ul li {
    padding-left: 20px;
}
.profile_card ul li strong{
    padding-left: 20px;
}
.profile_card ul li ul {
    padding-left: 100px;
}
.admin_help{
    text-decoration: underline;
}

.admin_help:hover{
    text-decoration: none;
    font-size: 110%;
}
.act_deact_buttom{
    width: 80%;
    border: 1px solid black;
    border-radius: 5%;
    color: white;
}

